variables.Variables.scala.error
Erreur de compilation :
Variables:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var i:Boolean
    ^Variables:2: error: local variables must be initialized
var i:Boolean
    ^Variables:3: error: value unary_! is not a member of Unit
if(!(i = estSurBiscuit())){
   ^